undo todolist font vertical alignment correction

--- a/src/components/checklist/theme.css
+++ b/src/components/checklist/theme.css
@@ -13,7 +13,7 @@
     font-weight: var(--sd-fontWeightBold);
     line-height: 1.21;
     color: rgb(31, 39, 64);
-    padding: 1.25em 0 1em 1em;
+    padding: 1em 0 1em 1.5em;
     margin: 1em 0;
 
     &:before {
